@@ -3,6 +3,10 @@ UPDATE {pre}_options SET options_value = '2010-08-27' WHERE options_mod = 'clans
 UPDATE {pre}_options SET options_value = 61 WHERE options_mod = 'clansphere' AND options_name = 'version_id';
 
 ALTER TABLE {pre}_users ADD users_emailregister varchar(255) NOT NULL default '';
+UPDATE {pre}_users SET users_emailregister = users_email;
+ALTER TABLE {pre}_users DROP users_email;
+ALTER TABLE {pre}_users ADD users_email varchar(255) NOT NULL UNIQUE default '';
+UPDATE {pre}_users SET users_email = users_emailregister;
 
 CREATE TABLE {pre}_trashmail (
 	trashmail_id {serial},
@@ -12,4 +16,3 @@ CREATE TABLE {pre}_trashmail (
 ){engine};
 
 CREATE INDEX {pre}_trashmail_entry_index ON {pre}_trashmail (trashmail_entry);
-
