@@ -5,8 +5,10 @@ ClanSphere 2010.0.1 >> 2010-09-XX
 ___________________________________________________________
 
 -> Added class "noexpand" for textareas to exclude them from the autoexpander (x-ray)
--> Added function cs_subtemplate_check to look for the existance and path of theme files (hajo)
 -> Added domain based blocklist to most email forms to reduce the usage of trashmail addresses (fr33z3m4n, hajo)
+-> Added field for registration email that is not changeable later on (fr33z3m4n)
+-> Added function cs_subtemplate_check to look for the existance and path of theme files (hajo)
+-> Added search functionality for eventguest entries (hajo)
 -> Changed behavior of cs_cache_save a bit for more simple usage (hajo)
 -> Fixed ajax with underscores in filenames, due to this hyphens are no longer allowed in them (schiri)
 -> Fixed error page on too old php versions by using a fallback file (hajo)
